styled some more & fixed issue with player image not showing

--- a/style.css
+++ b/style.css
@@ -14,6 +14,19 @@ main {
 }
 
 #back-button {
-  position: relative;
-  top: 600px;
+ background-color: maroon;
+ color: silver;
+}
+
+img {
+  width: 300px;
+  height: 300px;
+}
+
+main > p {
+  font-size: 25px;
+}
+
+ul > li {
+  font-size: 30px;
 }
